# executorch-rebuild

./: .gitignore  Just  conf  exp.csv  graph.dot  graph.py  hello.py  just1  just2  just3  main_graph.py  main_partition.py  pyproject.toml
backends/: backend_details.py  partitioner.py  simple_backend.py
containers/cmake-buck2-dev/: Dockerfile  devcontainer.json
executorch/: __init__.py  test_tracer.py
executorch/exir/: __init__.py  common.py  error.py  scalar.py  scalar_type.py  schema.py  sym_util.py  tensor.py  tracer.py  version.py
